Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/NestedDuplicateLabels.out
NestedDuplicateLabels.java:12:14: compiler.err.label.already.in.use: foo
1 error
