Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/NestedDuplicateLabels.java
/*
 * @test /nodynamiccopyright/
 * @bug 1241001
 * @summary The compiler failed to detect duplicate, nested labels.
 * @author turnidge
 *
 * @compile/fail/ref=NestedDuplicateLabels.out -XDrawDiagnostics  NestedDuplicateLabels.java
 */

class NestedDuplicateLabels {
    void method() {
    foo: { { foo: {} } }
    }
}
